--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "miragejs": "^0.1.43",
     "typescript": "4.5.4"
   }
 }
